Fixed line in help

--- a/miniboy/index.html
+++ b/miniboy/index.html
@@ -1316,7 +1316,7 @@ Programa
 <tr><td>LLAMA(LL)       direccionPrograma</td></tr>
 <tr><td>RETORNA(RET)</td></tr>
 <tr><td>MUEVEVALORDIRECCION(MUEVD) destino direccion</td></tr>
-<tr><td>MUEVEVALORDIRECCION(MUEVD) destino direccion</td></tr>
+<tr><td>MUEVEDIRECCION(MUED)       destino origen</td></tr>
 <tr><td>ESPERA           tiempo</td></tr>
 <tr><td>NUMERO_ALEATORIO destino origen1 origen2</td></tr>
 <tr><td>ESPERA_ENTRADA_TECLADO</td></tr>
